# muralApp_test

./: draw.py  get_token.py  main.py  pyproject.toml  ui.py
src/: config.py  main.py  ui.py
src/api/: mural_client.py
src/murals/: router.py  service.py
src/routers/: api.py  web.py
src/static/css/: styles.css
src/static/js/: main.txt
src/templates/: index.html
